--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <option value="acceident">Tire Change</option>
                         <option value="acceident">Jump String</option>
                      </select>
+                 <input type="submit" value="Make an Appoinment">
             </form>
         </div>
     </section>
